--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,16 @@
             <artifactId>jsoup</artifactId>
             <version>1.15.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.vaadin.external.google</groupId>
+            <artifactId>android-json</artifactId>
+            <version>0.0.20131108.vaadin1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.11.4</version>
+        </dependency>
     </dependencies>
 
 </project>
